--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Middleware Tips
 email: your-email@example.com
 description: Middleware Notes.
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://miservers.github.io/"
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://miservers.github.io"
 twitter_username: jekyllrb
 github_username:  jekyll
 
