--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,10 @@ url: "https:///miservers.github.io"
 repository: miservers/miservers.github.io # for github-metadata
 
 permalink: pretty
+sass:
+  sass_dir: _sass
+include: ['docs']
+markdown: kramdown
 
 exclude:
  # from https://github.com/jekyll/jekyll/blob/master/lib/site_template/_config.yml:
