--- a/_config.yml
+++ b/_config.yml
@@ -175,6 +175,7 @@ plugins:
   - jekyll-include-cache
 
 kramdown:
+  parse_block_html: true
   syntax_highlighter_opts:
     block:
       line_numbers: false
