--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ exclude:
    - fixtures/
 
 # Set a path/url to a logo that will be displayed instead of the title
-logo: "/assets/images/miservers.png"
+logo: "/assets/images/miservers.jpg"
 
 # Enable or disable the site search
 # Supports true (default) or false
