--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -1,7 +1,8 @@
-collections:
-  app-servers:
-    output: true
-    order:
-      - jboss-eap-7.md
-      - weblogic.md
-  collections_dir: docs
+icon_dir: docs/images/icon
+app-servers:
+  - title: Wildfly - JBoss EAP 
+    url: docs/app-servers/jboss-eap-7
+    icon: docs/images/icon/fa-wildfly.svg
+  - title: Tomcat 
+    url: docs/app-servers/tomcat
+    icon: docs/images/icon/fa-tomcat.png
