--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -1,8 +1,29 @@
 icon_dir: docs/images/icon
 app-servers:
-  - title: Wildfly - JBoss EAP 
+  - title: Wildfly JBoss EAP
     url: docs/app-servers/jboss-eap-7
     icon: docs/images/icon/fa-wildfly.svg
+ 
   - title: Tomcat 
     url: docs/app-servers/tomcat
     icon: docs/images/icon/fa-tomcat.png
+
+  - title: Weblogic 
+    url: docs/app-servers/weblogic
+    icon: docs/images/icon/fa-weblogic.png
+
+  - title: Weblogic 2
+    url: docs/app-servers/weblogic
+    icon: docs/images/icon/fa-weblogic.png
+
+  - title: Weblogic 3
+    url: docs/app-servers/weblogic
+    icon: docs/images/icon/fa-weblogic.png
+
+  - title: Weblogic 4
+    url: docs/app-servers/weblogic
+    icon: docs/images/icon/fa-weblogic.png
+
+  - title: Weblogic 6
+    url: docs/app-servers/weblogic
+    icon: docs/images/icon/fa-weblogic.png
