--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -2,11 +2,11 @@ icon_dir: docs/images/icon
 app-servers:
   - title: Wildfly JBoss EAP
     url: docs/app-servers/jboss-eap-7
-    icon: docs/images/icon/fa-wildfly.svg
+    icon: docs/images/icon/fa-wildfly.png
  
   - title: Tomcat 
     url: docs/app-servers/tomcat
-    icon: docs/images/icon/fa-tomcat.jpeg
+    icon: docs/images/icon/fa-tomcat.png
 
   - title: Weblogic 
     url: docs/app-servers/weblogic
