--- a/docs/devops/alma-vms/ansible/tomcat/tasks/main.yml
+++ b/docs/devops/alma-vms/ansible/tomcat/tasks/main.yml
@@ -1,2 +1,81 @@
 ---
 # tasks file for tomcat
+- name: Create the group
+  become: yes
+  group: 
+    name: "{{ tomcat_group }}"
+    state: present
+
+- name: Create the user
+  become: yes
+  user:
+    name: "{{ tomcat_group }}"
+    password: $5$CBFXJeNVZMz7SL46$yJJHz1OIyBNM30fRtndO4e8nLb/HPUQMbFu3hmRmx26
+    state: present
+
+- name: Setup the the JAVA_HOME
+  blockinfile:
+    path: /home/tomcat/.bash_profile
+    insertafter: 'EOF'
+    block: |
+      export JAVA_HOME={{java_home}}
+      export PATH=$JAVA_HOME/bin:$PATH
+
+- name: Delete "{{ catalina_home }}"
+  file:
+    path: "{{ catalina_home }}"
+    state: absent
+
+- name: Create a Directory "{{ catalina_home }}"
+  become: yes
+  file:
+    path: "{{ catalina_home }}"
+    state: directory
+    mode: 0755
+    owner: "{{ tomcat_user }}"
+    group: "{{ tomcat_group }}"
+
+- name: Download Tomcat using unarchive
+  become: yes
+  unarchive:
+    src: "{{tomcat_binary}}"
+    dest: '{{ catalina_home }}'
+    mode: 0755
+    copy: yes
+    owner: "{{ tomcat_user }}"
+    group: "{{ tomcat_group }}"
+
+- name: Move files to the /opt/tomcat10 directory
+  become: yes
+  become_user: "{{ tomcat_user }}"
+  shell: "mv -f {{catalina_home}}/apache*/* {{catalina_home}}/"
+
+- name: Apply server.xml Template
+  template:
+    src: templates/server.xml.j2
+    dest: "{{catalina_home}}/conf/server.xml"
+
+- name: Apply setenv.sh Template
+  template:
+    src: templates/setenv.sh.j2
+    dest: "{{catalina_home}}/bin/setenv.sh"
+
+- name: Start Tomcat
+  become: yes
+  become_user: tomcat
+  shell: "{{ catalina_home }}/bin/startup.sh"
+
+- name: "Connect to Tomcat server on port {{tomcat_http_port}} and check status 200 - Try 5 times"
+  tags: test
+  uri:
+    url: "http://localhost:{{tomcat_http_port}}"
+  register: result
+  until: "result.status == 200"
+  retries: 5
+  delay: 10
+
+- name: Stop Tomcat
+  become: yes
+  become_user: tomcat
+  shell: "{{ catalina_home }}/bin/shutdown.sh"
+
