--- a/docs/devops/ansible/alma-vms/Dockerfile
+++ b/docs/devops/ansible/alma-vms/Dockerfile
@@ -1,5 +1,7 @@
 FROM centos:7
 ENV container docker
+
+# remove some files to enable systemd
 RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; do [ $i == \
 systemd-tmpfiles-setup.service ] || rm -f $i; done); \
 rm -f /lib/systemd/system/multi-user.target.wants/*;\
@@ -10,5 +12,16 @@ rm -f /lib/systemd/system/sockets.target.wants/*initctl*; \
 rm -f /lib/systemd/system/basic.target.wants/*;\
 rm -f /lib/systemd/system/anaconda.target.wants/*;
 VOLUME [ "/sys/fs/cgroup" ]
+
+RUN yum clean all && \
+    yum -y install openssh-server openssh-clients initscripts
+
+RUN ssh-keygen -f /etc/ssh/ssh_host_rsa_key -N '' -t rsa
+RUN ssh-keygen -f /etc/ssh/ssh_host_ed25519_key -N '' -t ed25519
+EXPOSE 22
+
+# setup new root password
+RUN echo root:pass | chpasswd
+
 CMD ["/usr/sbin/init"]
 
